welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:4: error: value =< is not a member of Int
                                 else {if (min>20) {return 0} else {if (max=<20) {return max} else {if (min>=10) {return min} else {return 0}}}}} 
                                                                           ^